<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.seven.lib_common.stextview.TypeFaceView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingTop="19dp"
            android:paddingBottom="19dp"
            android:text="@string/hint_role"
            android:textColor="#1e1d1d"
            android:textSize="14sp" />

        <LinearLayout style="@style/me_buy_role_ll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/me_miners" />

                <TextView
                    android:id="@+id/me_buyrole_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/grade_lv_2"
                    android:textColor="#1e1d1d"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/me_kz_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#fe786c"
                    android:textSize="12sp" />


            </LinearLayout>

            <CheckBox
                android:id="@+id/me_cb_kz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/me_selector_check"
                android:button="@null" />
        </LinearLayout>

        <LinearLayout style="@style/me_buy_role_ll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/me_changz01" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/grade_lv_3"
                    android:textColor="#1e1d1d"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/me_cz_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#fe786c"
                    android:textSize="12sp" />


            </LinearLayout>

            <CheckBox
                android:id="@+id/me_cb_cz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/me_selector_check"
                android:button="@null" />
        </LinearLayout>

        <LinearLayout style="@style/me_buy_role_ll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/me_chengz01" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/grade_lv_4"
                    android:textColor="#1e1d1d"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/me_chengz_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#fe786c"
                    android:textSize="12sp" />


            </LinearLayout>

            <CheckBox
                android:id="@+id/me_cb_chengz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/me_selector_check"
                android:button="@null" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingTop="19dp"
            android:paddingBottom="19dp"
            android:text="@string/hint_payment"
            android:textColor="#1e1d1d"
            android:textSize="12sp" />

        <LinearLayout style="@style/me_buy_role_ll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/me_buy_role_apliy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/label_alipay"
                    android:textColor="#1e1d1d"
                    android:textSize="14sp" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/me_cb_apliy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/me_selector_check"
                android:button="@null" />
        </LinearLayout>

        <LinearLayout style="@style/me_buy_role_ll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/me_buy_role_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/label_wechat_pay"
                    android:textColor="#1e1d1d"
                    android:textSize="14sp" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/me_cb_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/me_selector_check"
                android:button="@null" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/me_buy_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/me_btton_bg"
        android:text="确认购买"
        android:textColor="@color/white"
       android:layout_margin="16dp"/>
</LinearLayout>