<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_20"
    android:paddingTop="@dimen/padding_12"
    android:paddingRight="@dimen/padding_20">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit">

        <com.seven.lib_common.stextview.TypeFaceEdit
            android:id="@+id/mobile_et"
            style="@style/Edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_mobile"
            android:inputType="number"
            android:maxLength="11" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_alignParentBottom="true"
            android:background="@color/edit_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit"
        android:layout_marginTop="@dimen/margin_8">

        <com.seven.lib_common.stextview.TypeFaceEdit
            android:id="@+id/sms_code_et"
            style="@style/Edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_sms_code"
            android:inputType="number"
            android:maxLength="6"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_alignParentBottom="true"
            android:background="@color/edit_border" />

        <RelativeLayout
            android:id="@+id/sms_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:onClick="btClick"
            android:paddingLeft="@dimen/padding_16">

            <com.seven.lib_common.stextview.TypeFaceView
                android:id="@+id/sms_send_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/sms_code"
                android:textColor="@color/sms_send"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/submit_btn"
        style="@style/Button_Long"
        android:layout_marginTop="@dimen/margin_200"
        android:onClick="btClick">

        <com.seven.lib_common.stextview.TypeFaceView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

    </RelativeLayout>

</LinearLayout>